--- a/FoodDrive/views/login.ejs
+++ b/FoodDrive/views/login.ejs
@@ -24,18 +24,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<h1>Register Form</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
-				<form action="/register" method="post">
+				<form action="/login" method="post">
 					<input class="text" type="text" name="username" placeholder="Username" required="">
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
+					<br>
 					<input class="text" type="password" name="password" placeholder="Password" required="">
-					<input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
 					<div class="wthree-text">
 
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="SIGNUP">
+					<input type="submit" value="LOG IN">
 				</form>
-				<p>Back to Login <a href="/login"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="/register"> Register Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
