--- a/FoodDrive/views/register.ejs
+++ b/FoodDrive/views/register.ejs
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Register Form</h1>
+		<h1>Creative SignUp Form</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="/register" method="post">
@@ -30,12 +30,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<input class="text" type="password" name="password" placeholder="Password" required="">
 					<input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
 					<div class="wthree-text">
-
+						<label class="anim">
+							<input type="checkbox" class="checkbox" required="">
+							<span>I Agree To The Terms & Conditions</span>
+						</label>
 						<div class="clear"> </div>
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Back to Login <a href="/login"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
