--- a/FoodDrive/views/register.ejs
+++ b/FoodDrive/views/register.ejs
@@ -38,7 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="/login"> Login Now!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
