--- a/FoodDrive/views/login.ejs
+++ b/FoodDrive/views/login.ejs
@@ -1,27 +1,17 @@
-<!--
-Author: Colorlib
-Author URL: https://colorlib.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Creative Colorlib SignUp Form</title>
+<title></title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!-- //Custom Theme files -->
-<!-- web font -->
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
-<!-- //web font -->
 </head>
 <body>
-	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Register Form</h1>
+		<h1>Login Form</h1>
+		<p style="text-align:center"><FONT COLOR=red><%= error %></FONT></p>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="/login" method="post">
@@ -37,11 +27,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<p>Don't have an Account? <a href="/register"> Register Now!</a></p>
 			</div>
 		</div>
-		<!-- copyright -->
 		<div class="colorlibcopy-agile">
 			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
 		</div>
-		<!-- //copyright -->
 		<ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
@@ -55,6 +43,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<li></li>
 		</ul>
 	</div>
-	<!-- //main -->
 </body>
 </html>
